@@ -15,15 +15,32 @@ public record GlassesResponse(
         BigDecimal price,
         List<String> imageUrls,
         String category,
-        String brand
+        String brand,
+        String description,
+        Integer quantity,
+        boolean available,
+
+        // Specifications (Strings for frontend)
+        String frameMaterial,
+        String lensMaterial,
+        String frameColor,
+        String lensColor,
+        String gender,
+        String frameWidth,
+        String bridgeWidth,
+        String templeLength,
+        String lensWidth,
+        String lensHeight
 ) {
-    // Factory method that uses ImageUrlMapper
     public static GlassesResponse fromEntity(Glasses glasses, ImageUrlMapper mapper) {
+
         List<String> fullImageUrls = glasses.getImages().stream()
-                .sorted(Comparator.comparing(GlassesImage::getOrder,
-                        Comparator.nullsFirst(Comparator.naturalOrder())))
+                .sorted(Comparator.comparing(
+                        GlassesImage::getOrder,
+                        Comparator.nullsFirst(Comparator.naturalOrder())
+                ))
                 .map(image -> mapper.toFullUrl(image.getImageUrl()))
-                .collect(Collectors.toList());
+                .toList();
 
         return new GlassesResponse(
                 glasses.getId(),
@@ -31,7 +48,25 @@ public record GlassesResponse(
                 glasses.getPrice(),
                 fullImageUrls,
                 glasses.getCategory().getName(),
-                glasses.getBrand().getName()
+                glasses.getBrand().getName(),
+                glasses.getDescription(),
+                glasses.getQuantity(),
+                glasses.isInStock(),
+
+                glasses.getFrameMaterial(),
+                glasses.getLensMaterial(),
+                glasses.getFrameColor(),
+                glasses.getLensColor(),
+                glasses.getGender() != null ? glasses.getGender().name() : null,
+                toString(glasses.getFrameWidth()),
+                toString(glasses.getBridgeWidth()),
+                toString(glasses.getTempleLength()),
+                toString(glasses.getLensWidth()),
+                toString(glasses.getLensHeight())
         );
+    }
+
+    private static String toString(BigDecimal value) {
+        return value != null ? value.toPlainString() : null;
     }
 }
